syntax = "proto3";

option go_package = "delivery/internal/model/proto";

service Order {
  rpc UpdateDeliveryStatus (UpdateDeliveryStatusReq) returns (UpdateDeliveryStatusRes) {}
}

message UpdateDeliveryStatusReq {
  string order_code = 1;
  string tracking_code = 2;
  string status = 3;
  int64 updated_at = 4;
}

message UpdateDeliveryStatusRes {
  bool success = 1;
}